Сверстал страничку characterView.html

--- a/template/body.html
+++ b/template/body.html
@@ -1,6 +1,11 @@
-    <div class="blue">
+	<div class="blue">
 	  <div class="number">#{$i}</div>
       <img src="data/{$i}.png"/>
+	  <div class="buttonView">
+	    <a href="characterView.html?count={$i}" target="_blank">
+		  <img src="resourse/button.png"/>
+		</a>
+	  </div>
 	</div>
 	<div class="black">
       <img src="data/{$i}.png"/>
