--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,12 @@ img
     top: 10px;
     left: 10px;
     height: 50px;
-    width: 50px;
+    width: 100px;
     font-weight: 600;
+}
+.buttonView
+{
+    width: 50px;
+    height: 50px;
+	position: relative;
 }
