доработал скрипт characterView и поправил цвет и стили

--- a/css/characterViewStyles.css
+++ b/css/characterViewStyles.css
@@ -24,17 +24,17 @@ img
 
 .blue
 {
-	background-color: blue;
+	background-color: #5b9bd5;
 }
 
 .black
 {
-	background-color: black;
+	background-color: #000;
 }
 
 .white
 {
-	background-color: green;
+	background-color: #fff;
 }
 
 
