--- a/template/body.html
+++ b/template/body.html
@@ -2,7 +2,7 @@
 	  <div class="number">#{$i}</div>
       <img src="data/{$i}.png"/>
 	  <div class="buttonView">
-	    <a href="characterView.html?count={$i}" target="_blank">
+	    <a href="characterView.php?number={$i}" target="_blank">
 		  <img src="resourse/button.png"/>
 		</a>
 	  </div>
